--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
   --bg: #fffdfc;
-  --accent: #f2dcdc;
+  --accent: rgb(6, 62, 6);
   --text: #333;
   --font: "Outfit", sans-serif;
 }
@@ -41,7 +41,9 @@ a {
 }
 
 .header {
-  background: var(--accent);
+  background-image: url(images/pexels-jplenio-1423600.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   padding: 2rem 1rem;
   text-align: center;
 }
@@ -183,5 +185,18 @@ footer {
 
   .logo {
     font-size: 1.2rem;
+  }
+}
+@media (max-width: 768px) {
+  /* Tablets */
+  .img {
+    max-width: 150px;
+  }
+}
+
+@media (max-width: 480px) {
+  /* Mobile */
+  .img {
+    max-width: 120px;
   }
 }
